[package]
name = "patternutils-derive"
version = "0.1.0"
edition = "2021"
authors = ["Onur Altintas <onuraltintas2005@gmail.com>"]
description = "Derive macros & attribute macros for patternutils"
license = "MIT"
repository = "https://github.com/TannYuld/patternutils/tree/master"
keywords = ["proc-macro", "macro", "pattern", "design", "utility"]
categories = ["development-tools::procedural-macro"]


[dependencies]
quote = "1.0.40"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true
